--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@
  	width: 100%;
  	margin: 0 auto;
 
- 	background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("img/myphoto.jpg");
+ 	background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("img/myphoto.JPG");
  	background-repeat: no-repeat;
  	background-position: center top;
  	background-size: cover;
