--- a/main.css
+++ b/main.css
@@ -16,8 +16,8 @@
  	background-size: cover;
 
  	text-align: center;
- 	color: white;
- 	font-family: "Open Sans Condensed", "Ubuntu Condensed", "Pathway Gothic One", sans-serif;
+ 	color: blue;
+ 	font-family: "Copperplate", "Ubuntu Condensed", "Pathway Gothic One", sans-serif;
  	/*font-size: 300%;*/
  	/*letter-spacing: 0.5em;*/
 
