--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@
 
  	text-align: center;
  	color: blue;
- 	font-family: "Copperplate", "Ubuntu Condensed", "Pathway Gothic One", sans-serif;
+ 	font-family: "Copperplate",Times , sans-serif;
  	/*font-size: 300%;*/
  	/*letter-spacing: 0.5em;*/
 
