--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@
  	background-size: cover;
 
  	text-align: center;
- 	color: blue;
+ 	color: white;
  	font-family: "Copperplate", Times, sans-serif;
  	/*font-size: 300%;*/
  	/*letter-spacing: 0.5em;*/
