--- a/main.css
+++ b/main.css
@@ -5,30 +5,9 @@
  	margin: 0;
  }
 
- h1 {
- 	height: 50%;
- 	width: 100%;
- 	margin: 0 auto;
-
- 	background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("img/myphoto.JPG");
- 	background-repeat: no-repeat;
- 	background-position: center top;
- 	background-size: cover;
-
- 	text-align: center;
- 	color: white;
- 	font-family: "Copperplate", Times, sans-serif;
- 	/*font-size: 300%;*/
- 	/*letter-spacing: 0.5em;*/
-
- 	/*line-height: 500%;*/
+ .menu {
+     color: rgb(94,97,100);
+     background-color: rgb(135,159,136)
+     
  }
 
- .title {
- 	font-size: 150%;
- 	letter-spacing: 0.5em;
- }
-
- .subtitle {
- 	font-size: 100%;
- 	letter-spacing: 0.2em;
