--- a/main.css
+++ b/main.css
@@ -17,6 +17,7 @@
      padding-left: 8px;
      padding-right: 8px;
      float: left;
+     align: center; 
  }
 /* for float: left; */
  .clearfix::after{
