--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -24,7 +24,10 @@
 
 	<div class="mainbody clearfix">
 	  <div class="mainbody-text">
-
+	    Es sólo por mi mano, por mi rostro, mi corazón, mi espíritu</br></br>
+	    Que o me marchite, o me haga florecer,</br></br>
+	    Me convertiré como tierra verde, como tierra cultivada</br></br>
+	    Voy a germinar, voy a brotar.
 	  </div>
 
 	  <img src="img/salsa.png" alt="main image" class="mainbody-image">	
