--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -16,7 +16,7 @@
 	<div class="subtitle">Biology Enthusiast. Bunny Friend.</div>	
 
 	<div class="menu clearfix">
-          <div class="menu-item">Resume</div>
+          <div class="menu-item"><a href="documents/Resume.pdf">Resume</a></div>
           <div class="menu-item">Research</div>
           <div class="menu-item">About</div>
           <div class="menu-item">Home</div>
