--- a/docs/main.css
+++ b/docs/main.css
@@ -69,6 +69,7 @@ body, html {
     margin-left: 7%;
     width: 35%;
     float: left;
+    line-height: 2.0;
 }
 
 .mainbody-image {
@@ -76,6 +77,15 @@ body, html {
     margin-right: 7%;
     padding-top: 30px;
     width: 45%;
+    float: right;
+    display: block;
+}
+
+.mainbody-image-about {
+    margin-left: 0%;
+    margin-right: 7%;
+    padding-top: 30px;
+    width: 30%;
     float: right;
     display: block;
 }
