--- a/docs/main.css
+++ b/docs/main.css
@@ -106,3 +106,22 @@ body, html {
 .lastedit {
     color: rgb(70,67,78);    
 }
+
+<style>
+a:link {
+    color: rgb(255,255,255);
+    background-color: transparent;
+    text-decoration: none;
+}
+
+a:visited {
+    color: rgb(255,255,255);
+    background-color: transparent;
+    text-decoration: none;
+}
+
+a:hover {
+  color: pink;
+  background-color: transparent;
+}
+</style>
