--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -17,9 +17,9 @@
 
 	<div class="menu clearfix">
           <div class="menu-item"><a href="documents/Resume.pdf">Resume</a></div>
-          <div class="menu-item">Research</div>
+	  <div class="menu-item"><a href="research.html">Research</a></div>
           <div class="menu-item"><a href="about.html">About</a></div>
-          <div class="menu-item">Home</div>
+	  <div class="menu-item"><a href="default.html">Home</a></div>
         </div>
 
 	<div class="mainbody clearfix">
