add Good morning Aurora and Empowering the Youth to activities

--- a/docs/main.css
+++ b/docs/main.css
@@ -82,6 +82,7 @@ body, html {
 
 .mainbody-text-activities {
     margin-top: 7%;
+    margin-bottom: 7%;
     margin-left: 7%;
     width: 85%;
     float: bottom;
