--- a/docs/main.css
+++ b/docs/main.css
@@ -65,9 +65,25 @@ body, html {
 }
 
 .mainbody-text {
+    margin-top: 7%;
+    margin-left: 7%;
+    width: 45%;
+    float: left;
+    line-height: 2.0;
+}
+
+.mainbody-text {
     margin-top: 15%;
     margin-left: 7%;
     width: 35%;
+    float: left;
+    line-height: 2.0;
+}
+
+.mainbody-text-about {
+    margin-top: 7%;
+    margin-left: 7%;
+    width: 45%;
     float: left;
     line-height: 2.0;
 }
@@ -101,7 +117,7 @@ body, html {
 .mainbody-image-about {
     margin-left: 0%;
     margin-right: 7%;
-    padding-top: 30px;
+    padding-top: 60px;
     width: 30%;
     float: right;
     display: block;
