--- a/docs/main.css
+++ b/docs/main.css
@@ -91,6 +91,7 @@ body, html {
 .mainbody-text-research {
     margin-top: 7%;
     margin-left: 7%;
+    margin-bottom: 10%;
     width: 85%;
     float: bottom;
     line-height: 2.0;
@@ -126,10 +127,17 @@ body, html {
 .mainbody-image-research {
     margin-left: auto;
     margin-right: auto;
-    padding-top: 30px;
+    padding-top: 1px;
+    padding-bottom: 50px;
     width: 50%;
     float: top;
     display: block;
+}
+
+.mainbody-image-researchgroup {
+    float: left;
+    width: 25%;
+    padding: 5px;
 }
 
 .mainbody-image-mecha {
